<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KP Peramalan</string>
    <string name="aplikasi_br_peramalan">APLIKASI<br></br>PERAMALAN</string>
    <string name="sistem_informasi">Sistem Informasi</string>
    <string name="universitas_trunojoyo">Universitas Trunojoyo</string>
    <string name="harga_minyak_mentah_indonesia">HARGA MINYAK MENTAH</string>
    <string name="aplikasi">APLIKASI</string>
    <string name="peramalan">PERAMALAN</string>
    <string name="indonesia">INDONESIA</string>
    <string name="settings">Settings</string>
    <string name="settings_app">Pengaturan Aplikasi</string>
    <string name="key_localization">key_localization</string>
    <string name="change_language">Ganti Bahasa</string>
    <string name="summary">Tersedia Bahasa Indonesia dan Bahas Inggris</string>
    <string name="key_about">key_about</string>
    <string name="hi_selamat_datang">Hi, Selamat Datang !</string>
    <string name="bg_title">bg title</string>
    <string name="ic_hello">IC Hello</string>
    <string name="title">Aplikasi ini dibuat\nuntuk memenuhi\ntugas kerja praktek</string>
    <string name="bg_page">bg page</string>
    <string name="menu">Menu:</string>
    <string name="ic_alpha">IC ALPHA</string>
    <string name="dummy_title">Nilai Parameter Alpha</string>
    <string name="Nilai_Parameter_Alpha">Nilai Parameter Alpha</string>
    <string name="Data_Harga_Minyak_Bumi">Data Harga Minyak Mentah</string>
    <string name="Single_Exponential_Smoothing">Single Exponential Smoothing</string>
    <string name="Double_Exponential_Smoothing">Double  Exponential Smoothing</string>
    <string name="parameter_alpha">Parameter Alpha</string>
    <string name="data_harga">Data Harga Minyak Mentah</string>
    <string name="sekarang">Sekarang</string>
    <string name="dummy_alpha">0.0</string>
    <string name="nilai_parameter">Nilai\nParameter\nAlpha</string>
    <string name="title_edt_alpha">Edit nilai parameter alpha</string>
    <string name="hint_alpha">Masukan alpha 0.1 - 0.9</string>
    <string name="simpan_nilai_parameter_alpha">Simpan perubahan</string>
    <string name="evaluasi">Evaluasi</string>
    <string name="ramal">Ramal</string>
    <string name="chart">Chart</string>
    <string name="perhitungan">Perhitungan</string>
    <string name="update_success">Update Berhasil</string>
    <string name="update_fail">Update Gagal</string>
    <string name="no">No.</string>
    <string name="tahun">Tahun</string>
    <string name="bulan">Bulan</string>
    <string name="harga_minyak_usd_barrel">Harga</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="detail_data">Data Detail</string>
    <string name="masukan_tahun">Masukan Tahun</string>
    <string name="masukan_bulan_1_12">Masukan bulan 1-12</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="hapus_data">Hapus Data</string>
    <string name="batal">Batal</string>
    <string name="yakin_batal_menghapus">Apakah anda ingin batal menghapus?</string>
    <string name="yakin_menghapus">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="hapus_data_minyak">Hapus data minyak mentah</string>
    <string name="hapus_berhasil">Berhasil Dihapus</string>
    <string name="data_berhasil_disimpan">Data berhasil di simpan</string>
    <string name="masukan_harga">Masukan harga</string>
    <string name="chart_berhasil_dimuat">Chart berhasil dimuat</string>
    <string name="hasil_evaluasi_model">Hasil Evaluasi Model</string>
    <string name="error">Error</string>
    <string name="dummy_decimal">0.0000000000</string>
    <string name="mad">MAD</string>
    <string name="mape">MAPE</string>
    <string name="MSE">MSE</string>
    <string name="at">At</string>
    <string name="hasil_forecast_ft">Hasil Forecast Ft</string>
    <string name="hasil_perhitungan_model">Hasil Perhitungan Model</string>
    <string name="hasil_peramalan">Hasil Peramalan Periode Ke Depan</string>
    <string name="ts">TS</string>
    <string name="y_" tools:ignore="StringEscaping">Y</string>
    <string name="y__" tools:ignore="StringEscaping">Y2</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="ft">Ft</string>
    <string name="masukan_jumlah_bulan">Masukan jumlah bulan</string>
    <string name="jumlah_bulan_periode_kedepan">Jumlah bulan periode kedepan</string>
    <string name="mulai_meramal">Mulai Meramal</string>
    <string name="rama_periode">Ramal Periode Masa Depan</string>
    <string name="proses_ramal_succsess">Proses Ramal Berhasil</string>

    <string-array name="data_title">
        <item>@string/Nilai_Parameter_Alpha</item>
        <item>@string/Data_Harga_Minyak_Bumi</item>
        <item>@string/Single_Exponential_Smoothing</item>
        <item>@string/Double_Exponential_Smoothing</item>

    </string-array>


    <array name="data_ic">
        <item>@drawable/ic_alpha</item>
        <item>@drawable/ic_data_harga</item>
        <item>@drawable/ic_ses</item>
        <item>@drawable/ic_des</item>

    </array>
    <array name="data_color">
        <item>@drawable/bg_btn_alpha</item>
        <item>@drawable/bg_btn_data</item>
        <item>@drawable/bg_btn_ses</item>
        <item>@drawable/bg_btn_des</item>

    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lihat_dataset">Lihat Dataset</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="kementrian_ppn_bappernas">Kementrian PPN/ Bappernas</string>
    <string name="sumber_data">Sumber Data</string>
    <string name="harga_minyak">Harga Minyak Mentah Indonesia</string>
    <string name="data">Data</string>
    <string name="aplikasi_peramalan_harga_minyak_mentah_indonesia_menggunakan_metode_single_exponensial_smoothing_dan_double_exponensial_smoothing">Aplikasi Peramalan Harga Minyak Mentah Indonesia Menggunakan Metode Single Exponensial Smoothing Dan Double Exponensial Smoothing Dengan Tujuan Untuk Menyelesaikan Tugas Kerja Praktek</string>
    <string name="_2006_2017">2006 -2017</string>


</resources>