<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size_8"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginStart="@dimen/size_8"
        android:layout_marginEnd="@dimen/size_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_no"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/hitam_200"
            android:text="@string/no"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_at"
            android:layout_weight="2"
            android:fontFamily="@font/poppins"
            android:textColor="@color/hitam_200"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/at"/>

        <TextView
            android:id="@+id/tv_y_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="3"
            android:fontFamily="@font/poppins"
            android:textColor="@color/hitam_200"
            android:text="@string/y_"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/tv_yy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="3"
            android:fontFamily="@font/poppins"
            android:textColor="@color/hitam_200"
            android:text="@string/y__"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/tv_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="3"
            android:fontFamily="@font/poppins"
            android:textColor="@color/hitam_200"
            android:text="@string/a"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/tv_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="3"
            android:fontFamily="@font/poppins"
            android:textColor="@color/hitam_200"
            android:text="@string/b"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/tv_ft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="3"
            android:fontFamily="@font/poppins"
            android:textColor="@color/hitam_200"
            android:text="@string/ft"
            android:textSize="12sp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hitam_200"
        android:layout_marginTop="@dimen/size_8"
       />
</LinearLayout>