<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ses.SesHitungFragment">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress_bar"
        style="@style/SpinKitView.CubeGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"
        app:SpinKit_Color="@color/hitam_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/hasil_perhitungan_model"
        android:textColor="@color/hitam_200"
        android:gravity="center"
        />
        <LinearLayout
            android:layout_marginStart="@dimen/size_8"
            android:layout_marginEnd="@dimen/size_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:text="@string/no"
                android:textSize="12sp" />

            <TextView
                android:layout_weight="2"
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/at"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:text="@string/y_"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:id="@+id/yseseshdes"
                android:text="@string/y__"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:id="@+id/ahdes"
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:text="@string/a"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:text="@string/b"
                android:id="@+id/bhdes"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:id="@+id/fthdes"
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:text="@string/ft"
                android:textSize="12sp" />

        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_hasil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_hasil_des" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>