<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/bg_bottom"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/bg_page" />
    <ImageView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="@dimen/size_16"
        android:contentDescription="@string/bg_title"
        android:src="@drawable/bg_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hi" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16"
        android:contentDescription="@string/ic_hello"
        android:src="@drawable/ic_hello"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintEnd_toEndOf="@+id/card"
        app:layout_constraintTop_toTopOf="@+id/card"
        app:layout_constraintVertical_bias="0.612" />

    <TextView
        android:id="@+id/hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/hi_selamat_datang"
        android:layout_margin="@dimen/size_16"
        android:textColor="@color/hitam_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_margin="@dimen/size_32"
        android:textColor="@color/hitam_200"
        android:lineSpacingExtra="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toTopOf="@+id/card" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:textColor="@color/hitam_200"
        android:layout_margin="@dimen/size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:listitem="@layout/item_main_menu"/>


</androidx.constraintlayout.widget.ConstraintLayout>