<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.tentang.AboutFragment">

    <ImageView
        android:id="@+id/bg_bottom"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:contentDescription="@string/bg_page"
        android:scaleType="fitXY"
        android:src="@drawable/bg_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginEnd="@dimen/size_16"
        android:text="@string/aplikasi_peramalan_harga_minyak_mentah_indonesia_menggunakan_metode_single_exponensial_smoothing_dan_double_exponensial_smoothing"
        android:textColor="@color/hitam_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginEnd="@dimen/size_16"
        android:layout_marginTop="@dimen/size_16"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:layout_editor_absoluteX="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/data"
                android:textSize="14sp" />

            <TextView
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/harga_minyak"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/tahun"
                android:textSize="14sp" />

            <TextView
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2006_2017"
                android:textSize="14sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/sumber_data"
                android:textSize="14sp" />

            <TextView
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kementrian_ppn_bappernas"
                android:textSize="14sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Total Data"
                android:textSize="14sp" />

            <TextView
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="135 Data"
                android:textSize="14sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:fontFamily="@font/poppins"
                android:textColor="@color/hitam_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/lihat_dataset"
                android:textSize="14sp" />

            <TextView
                android:foreground="?android:attr/selectableItemBackground"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/poppins"
                android:textColor="@color/blue_200"
                android:id="@+id/btn_lihat_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lihat_data"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>