<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ses.SesHitungFragment">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress_bar"
        style="@style/SpinKitView.CubeGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"
        app:SpinKit_Color="@color/hitam_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_16"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/hasil_perhitungan_model"
            android:textColor="@color/hitam_200"
            android:gravity="center"
            />
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:padding="8dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/no"
                android:textColor="@color/hitam_200"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="2"
                android:fontFamily="@font/poppins"
                android:text="@string/tahun"
                android:textColor="@color/hitam_200" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="2"
                android:fontFamily="@font/poppins"
                android:text="@string/bulan"
                android:textColor="@color/hitam_200"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:fontFamily="@font/poppins"
                android:text="@string/at"
                android:textColor="@color/hitam_200"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:fontFamily="@font/poppins"
                android:text="@string/hasil_forecast_ft"
                android:textColor="@color/hitam_200"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hasil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_hasil" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>